// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateUserLauncherCSS when the color is light is calculated to the same color with a darker text color 1`] = `
"
    .u-userLauncherColor:not([disabled]) {
      background-color: #58F9F7 !important;
      color: #186766 !important;
      fill: #186766 !important;
    }

    .u-userLauncherColor:not([disabled]) svg {
      color: #186766;
      fill: #186766;
    }

    .u-userLauncherColor:not([disabled]) svg path {
      fill: #186766;
    }

    .u-userLauncherColor:not([disabled]):focus {
      box-shadow: inset 0 0 0 0.21428571428571427rem rgba(24, 103, 102, 0.1) !important;
    }
  "
`;

exports[`generateUserLauncherCSS when the color is not light is calculated to the same color with a white highlight 1`] = `
"
    .u-userLauncherColor:not([disabled]) {
      background-color: #283646 !important;
      color: #FFFFFF !important;
      fill: #FFFFFF !important;
    }

    .u-userLauncherColor:not([disabled]) svg {
      color: #FFFFFF;
      fill: #FFFFFF;
    }

    .u-userLauncherColor:not([disabled]) svg path {
      fill: #FFFFFF;
    }

    .u-userLauncherColor:not([disabled]):focus {
      box-shadow: inset 0 0 0 0.21428571428571427rem rgba(255, 255, 255, 0.1) !important;
    }
  "
`;

exports[`generateUserLauncherCSS when the color is set via embeddable config uses the color passed in from config 1`] = `
"
    .u-userLauncherColor:not([disabled]) {
      background-color: #283646 !important;
      color: #FFFFFF !important;
      fill: #FFFFFF !important;
    }

    .u-userLauncherColor:not([disabled]) svg {
      color: #FFFFFF;
      fill: #FFFFFF;
    }

    .u-userLauncherColor:not([disabled]) svg path {
      fill: #FFFFFF;
    }

    .u-userLauncherColor:not([disabled]):focus {
      box-shadow: inset 0 0 0 0.21428571428571427rem rgba(255, 255, 255, 0.1) !important;
    }
  "
`;

exports[`generateUserWidgetCSS when the color is light calculates the css correctly 1`] = `
"
    .u-userTextDecorationColor {
      text-decoration-color: #58F9F7 !important;
    }
    .u-userColor {
      color: #58F9F7 !important;
    }
    .u-iconColor {
      color: #58F9F7 !important;
    }
    .rf-CheckboxGroup__checkbox:checked + span:before,
    .u-userTextColor:not([disabled]) {
      color: #186766 !important;
      fill: #186766 !important;
    }
    .u-userTextColor:not([disabled]):hover,
    .u-userTextColor:not([disabled]):active,
    .u-userTextColor:not([disabled]):focus {
      color: #1A7170 !important;
      fill: #1A7170 !important;
    }
    .u-userFillColor:not([disabled]) svg {
      fill: #186766 !important;
    }
    .u-userFillColor:not([disabled]) svg path {
      fill: #186766 !important;
    }
    .u-userFillCustomColor svg path.customColor,
    .u-userFillCustomColor svg rect.customColor {
      fill: #186766 !important;
    }
    .u-userBackgroundColorNoHover {
      background-color: #58F9F7 !important;
      color: #186766 !important;
    }
    .u-userBackgroundColor:not([disabled]) {
      background-color: #58F9F7 !important;
      color: #186766 !important;
    }
    .u-userBackgroundColor:not([disabled]):hover,
    .u-userBackgroundColor:not([disabled]):active,
    .u-userBackgroundColor:not([disabled]):focus {
      background-color: #27F7F5 !important;
    }
    .u-userBorderColor:not([disabled]) {
      color: #58F9F7 !important;
      background-color: transparent !important;
      border-color: #58F9F7 !important;
    }
    .u-userBorderColor:not([disabled]):hover,
    .u-userBorderColor:not([disabled]):active,
    .u-userBorderColor:not([disabled]):focus {
      color: #186766 !important;
      background-color: #58F9F7 !important;
      border-color: #58F9F7 !important;
    }
    .u-userLinkColor a {
      color: #186766 !important;
    }
    .u-userLinkColor span {
      color: #186766 !important;
    }
    .u-userLinkColor a:hover {
      color: #186766 !important;
    }
    .u-userStrokeColor {
      stroke: #58F9F7 !important;
    }
    .u-userHeaderColor {
      background: #58F9F7 !important;
      color: #186766 !important;
    }
    .u-userHeaderButtonColor {
      fill: #186766 !important;
    }
    .u-userHeaderButtonColor svg path {
      fill: #186766 !important;
    }
    .u-userHeaderButtonColor:hover,
    .u-userHeaderButtonColor:active,
    .u-userHeaderButtonColor:focus {
      background: #27F7F5 !important;
    }
    .u-userHeaderButtonColor:focus svg {
      background: #27F7F5 !important;
    }
    .u-userHeaderButtonColorMobile {
      fill: #186766 !important;
    }
  "
`;

exports[`generateUserWidgetCSS when the color is not light u-userTextColor calculates the css correctly 1`] = `
"
    .u-userTextDecorationColor {
      text-decoration-color: #283646 !important;
    }
    .u-userColor {
      color: #283646 !important;
    }
    .u-iconColor {
      color: #283646 !important;
    }
    .rf-CheckboxGroup__checkbox:checked + span:before,
    .u-userTextColor:not([disabled]) {
      color: #283646 !important;
      fill: #283646 !important;
    }
    .u-userTextColor:not([disabled]):hover,
    .u-userTextColor:not([disabled]):active,
    .u-userTextColor:not([disabled]):focus {
      color: #2C3B4D !important;
      fill: #2C3B4D !important;
    }
    .u-userFillColor:not([disabled]) svg {
      fill: #283646 !important;
    }
    .u-userFillColor:not([disabled]) svg path {
      fill: #283646 !important;
    }
    .u-userFillCustomColor svg path.customColor,
    .u-userFillCustomColor svg rect.customColor {
      fill: #283646 !important;
    }
    .u-userBackgroundColorNoHover {
      background-color: #283646 !important;
      color: #FFFFFF !important;
    }
    .u-userBackgroundColor:not([disabled]) {
      background-color: #283646 !important;
      color: #FFFFFF !important;
    }
    .u-userBackgroundColor:not([disabled]):hover,
    .u-userBackgroundColor:not([disabled]):active,
    .u-userBackgroundColor:not([disabled]):focus {
      background-color: #2C3B4D !important;
    }
    .u-userBorderColor:not([disabled]) {
      color: #283646 !important;
      background-color: transparent !important;
      border-color: #283646 !important;
    }
    .u-userBorderColor:not([disabled]):hover,
    .u-userBorderColor:not([disabled]):active,
    .u-userBorderColor:not([disabled]):focus {
      color: #FFFFFF !important;
      background-color: #283646 !important;
      border-color: #283646 !important;
    }
    .u-userLinkColor a {
      color: #283646 !important;
    }
    .u-userLinkColor span {
      color: #283646 !important;
    }
    .u-userLinkColor a:hover {
      color: #283646 !important;
    }
    .u-userStrokeColor {
      stroke: #283646 !important;
    }
    .u-userHeaderColor {
      background: #283646 !important;
      color: #FFFFFF !important;
    }
    .u-userHeaderButtonColor {
      fill: #FFFFFF !important;
    }
    .u-userHeaderButtonColor svg path {
      fill: #FFFFFF !important;
    }
    .u-userHeaderButtonColor:hover,
    .u-userHeaderButtonColor:active,
    .u-userHeaderButtonColor:focus {
      background: #2C3B4D !important;
    }
    .u-userHeaderButtonColor:focus svg {
      background: #2C3B4D !important;
    }
    .u-userHeaderButtonColorMobile {
      fill: #FFFFFF !important;
    }
  "
`;

exports[`generateUserWidgetCSS when the color is set via embeddable config uses the color passed in from config 1`] = `
"
    .u-userTextDecorationColor {
      text-decoration-color: #283646 !important;
    }
    .u-userColor {
      color: #283646 !important;
    }
    .u-iconColor {
      color: #283646 !important;
    }
    .rf-CheckboxGroup__checkbox:checked + span:before,
    .u-userTextColor:not([disabled]) {
      color: #283646 !important;
      fill: #283646 !important;
    }
    .u-userTextColor:not([disabled]):hover,
    .u-userTextColor:not([disabled]):active,
    .u-userTextColor:not([disabled]):focus {
      color: #2C3B4D !important;
      fill: #2C3B4D !important;
    }
    .u-userFillColor:not([disabled]) svg {
      fill: #283646 !important;
    }
    .u-userFillColor:not([disabled]) svg path {
      fill: #283646 !important;
    }
    .u-userFillCustomColor svg path.customColor,
    .u-userFillCustomColor svg rect.customColor {
      fill: #283646 !important;
    }
    .u-userBackgroundColorNoHover {
      background-color: #283646 !important;
      color: #FFFFFF !important;
    }
    .u-userBackgroundColor:not([disabled]) {
      background-color: #283646 !important;
      color: #FFFFFF !important;
    }
    .u-userBackgroundColor:not([disabled]):hover,
    .u-userBackgroundColor:not([disabled]):active,
    .u-userBackgroundColor:not([disabled]):focus {
      background-color: #2C3B4D !important;
    }
    .u-userBorderColor:not([disabled]) {
      color: #283646 !important;
      background-color: transparent !important;
      border-color: #283646 !important;
    }
    .u-userBorderColor:not([disabled]):hover,
    .u-userBorderColor:not([disabled]):active,
    .u-userBorderColor:not([disabled]):focus {
      color: #FFFFFF !important;
      background-color: #283646 !important;
      border-color: #283646 !important;
    }
    .u-userLinkColor a {
      color: #283646 !important;
    }
    .u-userLinkColor span {
      color: #283646 !important;
    }
    .u-userLinkColor a:hover {
      color: #283646 !important;
    }
    .u-userStrokeColor {
      stroke: #283646 !important;
    }
    .u-userHeaderColor {
      background: #283646 !important;
      color: #FFFFFF !important;
    }
    .u-userHeaderButtonColor {
      fill: #FFFFFF !important;
    }
    .u-userHeaderButtonColor svg path {
      fill: #FFFFFF !important;
    }
    .u-userHeaderButtonColor:hover,
    .u-userHeaderButtonColor:active,
    .u-userHeaderButtonColor:focus {
      background: #2C3B4D !important;
    }
    .u-userHeaderButtonColor:focus svg {
      background: #2C3B4D !important;
    }
    .u-userHeaderButtonColorMobile {
      fill: #FFFFFF !important;
    }
  "
`;

exports[`generateWebWidgetPreviewCSS calculates the colours correctly 1`] = `
"
    .u-userBackgroundColor:not([disabled]) {
      background-color: #58F9F7 !important;
      color: #186766 !important;
    }
    .u-userBackgroundColor:not([disabled]):hover,
    .u-userBackgroundColor:not([disabled]):active,
    .u-userBackgroundColor:not([disabled]):focus {
      background-color: #27F7F5 !important;
    }
    .u-userHeaderColor {
      background: #58F9F7 !important;
      color: #186766 !important;
    }
    .u-userHeaderButtonColor {
      fill: #186766 !important;
    }
    .u-userHeaderButtonColor:hover,
    .u-userHeaderButtonColor:active,
    .u-userHeaderButtonColor:focus {
      background: #27F7F5 !important;
    }
    .u-userHeaderButtonColor:focus svg {
      background: #27F7F5 !important;
    }
    .u-userBackgroundColorNoHover {
      background-color: #58F9F7 !important;
      color: #186766 !important;
    }
  "
`;

exports[`when the color is extremely light (white or almost white) generateUserLauncherCSS calculates the colours correctly 1`] = `
"
    .u-userLauncherColor:not([disabled]) {
      background-color: #FFFFFF !important;
      color: #6F6F6F !important;
      fill: #6F6F6F !important;
    }

    .u-userLauncherColor:not([disabled]) svg {
      color: #6F6F6F;
      fill: #6F6F6F;
    }

    .u-userLauncherColor:not([disabled]) svg path {
      fill: #6F6F6F;
    }

    .u-userLauncherColor:not([disabled]):focus {
      box-shadow: inset 0 0 0 0.21428571428571427rem rgba(111, 111, 111, 0.1) !important;
    }
  "
`;

exports[`when the color is extremely light (white or almost white) generateUserWidgetCSS calculates the colours correctly 1`] = `
"
    .u-userTextDecorationColor {
      text-decoration-color: #FFFFFF !important;
    }
    .u-userColor {
      color: #FFFFFF !important;
    }
    .u-iconColor {
      color: #87929D !important;
    }
    .rf-CheckboxGroup__checkbox:checked + span:before,
    .u-userTextColor:not([disabled]) {
      color: #6F6F6F !important;
      fill: #6F6F6F !important;
    }
    .u-userTextColor:not([disabled]):hover,
    .u-userTextColor:not([disabled]):active,
    .u-userTextColor:not([disabled]):focus {
      color: #7A7A7A !important;
      fill: #7A7A7A !important;
    }
    .u-userFillColor:not([disabled]) svg {
      fill: #6F6F6F !important;
    }
    .u-userFillColor:not([disabled]) svg path {
      fill: #6F6F6F !important;
    }
    .u-userFillCustomColor svg path.customColor,
    .u-userFillCustomColor svg rect.customColor {
      fill: #6F6F6F !important;
    }
    .u-userBackgroundColorNoHover {
      background-color: #2F3941 !important;
      color: #FFFFFF !important;
    }
    .u-userBackgroundColor:not([disabled]) {
      background-color: #2F3941 !important;
      color: #FFFFFF !important;
    }
    .u-userBackgroundColor:not([disabled]):hover,
    .u-userBackgroundColor:not([disabled]):active,
    .u-userBackgroundColor:not([disabled]):focus {
      background-color: #343F48 !important;
    }
    .u-userBorderColor:not([disabled]) {
      color: #2F3941 !important;
      background-color: transparent !important;
      border-color: #2F3941 !important;
    }
    .u-userBorderColor:not([disabled]):hover,
    .u-userBorderColor:not([disabled]):active,
    .u-userBorderColor:not([disabled]):focus {
      color: #FFFFFF !important;
      background-color: #2F3941 !important;
      border-color: #2F3941 !important;
    }
    .u-userLinkColor a {
      color: #6F6F6F !important;
    }
    .u-userLinkColor span {
      color: #6F6F6F !important;
    }
    .u-userLinkColor a:hover {
      color: #6F6F6F !important;
    }
    .u-userStrokeColor {
      stroke: #FFFFFF !important;
    }
    .u-userHeaderColor {
      background: #FFFFFF !important;
      color: #6F6F6F !important;
    }
    .u-userHeaderButtonColor {
      fill: #6F6F6F !important;
    }
    .u-userHeaderButtonColor svg path {
      fill: #6F6F6F !important;
    }
    .u-userHeaderButtonColor:hover,
    .u-userHeaderButtonColor:active,
    .u-userHeaderButtonColor:focus {
      background: #D9D9D9 !important;
    }
    .u-userHeaderButtonColor:focus svg {
      background: #D9D9D9 !important;
    }
    .u-userHeaderButtonColorMobile {
      fill: #6F6F6F !important;
    }
  "
`;
